--- a/TP1_Programacion_Avanzada.ipynb
+++ b/TP1_Programacion_Avanzada.ipynb
@@ -451,7 +451,7 @@
         "  lista_de_personas = []\n",
         "  for i in range(5):\n",
         "    nombre = input(f\"Ingrese el nombre de la persona {i + 1 }: \")\n",
-        "    edad = int(input(f\"Ingrese la edad de la persona {i + 1}: \"))\n",
+        "    edad = input(f\"Ingrese la edad de la persona {i + 1}: \")\n",
         "    persona = Persona(nombre, edad)\n",
         "    lista_de_personas.append(persona)\n",
         "  return lista_de_personas\n",
